# deep-compression

./: .gitignore  main.py  pyproject.toml  train.py  train_compressai.py
configs/: example.yaml
deep_compression/: __init__.py
deep_compression/config/: __init__.py  config.py
deep_compression/datasets/: utils.py
deep_compression/layers/: __init__.py  batch_channel_decorrelation.py  channel_rate.py  residual_pred.py  squeeze_excitation.py  utils.py
deep_compression/losses/: __init__.py  batch_channel_decorrelation.py  rate_distortion.py
deep_compression/models/: __init__.py  channel_remixer.py  compressai.py  decorr.py  residual_pred.py
deep_compression/runners/: __init__.py  custom.py
deep_compression/utils/: __init__.py  catalyst.py  git.py  metrics.py  utils.py
deep_compression/utils/compressai/: __main__.py  update_and_eval_model.py
deep_compression/zoo/: __init__.py  compressai_base.py  models.py
